first working e2e test